# hermes-mpm

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/hermes_mpm/: __init__.py  cli.py  cluster_ops_client.py  intent.py  orchestrator.py  pipeline.py  plugin.yaml  profiles.py  routing.py  runs_db.py  weather_core.py
src/hermes_mpm/dashboard/: manifest.json  plugin_api.py
src/hermes_mpm/data/: profiles.default.yaml
src/hermes_mpm/gate/: __init__.py  adapter.py  audit.py  config.py  reviewer.py  tiering.py  tighten.py  verdict.py
src/hermes_mpm/skills/pm_orchestrator/: SKILL.md
src/hermes_mpm/tests/: test_axi_cheatsheet.py  test_dashboard_plugin_api.py  test_gate.py  test_intent.py  test_leaf_batch_hint.py  test_loads.py  test_orchestrator.py  test_parallelism_cli.py  test_routing.py  test_runs_cli.py  test_runs_db.py  test_runs_hooks.py  test_turn_batches.py
